--- a/template/core-dist/src/app/navigation/layouts/default/default.layout.component.html
+++ b/template/core-dist/src/app/navigation/layouts/default/default.layout.component.html
@@ -1,6 +1,6 @@
 <md-sidenav-layout>
   <header>
-    <app-topnav [sideNav]="sidenav"></app-topnav>
+    <app-topnav [class.header--hover]="!showSidenav && showOnHover" [class.header--with-sidenav]="showSidenav" [sideNav]="sidenav"></app-topnav>
   </header>
   <md-sidenav (mouseenter)="hover(true)" (mouseleave)="hover(false)" #sidenav
               [mode]="(_navigation.mediumScreenAndDown || showOnHover) ? 'over' : 'side'"
