--- a/template/core-dist/src/index.html
+++ b/template/core-dist/src/index.html
@@ -10,7 +10,7 @@
   <meta name="theme-color" content="#ffffff">
   <link rel="icon" type="image/png" href="/assets/favicons/favicon-icon.png">
   <link href="//fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
-  <link href="https://fonts.googleapis.com/css?family=Montserrat:300,400,500|Roboto" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css?family=Montserrat:300,400,500|Roboto:300,400,500" rel="stylesheet">
   <script src="https://cdn.auth0.com/js/lock/10.8/lock.min.js"></script>
 
   <style>
