--- a/template/core-dist/src/assets/scss/_entity-view.scss
+++ b/template/core-dist/src/assets/scss/_entity-view.scss
@@ -73,7 +73,8 @@
     right: 0;
     width: 99%;
     background: white;
-    box-shadow: -1px -1px 2px rgba(0, 0, 0, 0.15);
+    box-shadow: -1px 1px 2px rgba(0, 0, 0, 0.15);
+    overflow: auto;
   }
 
   &__nav {
@@ -162,6 +163,25 @@
 
     &__content {
       padding: 18px;
+      font-family: Roboto, "Helvetica Neue", sans-serif;
+
+      &__title {
+        margin: 5px 18px 15px;
+        font-family: Roboto, "Helvetica Neue", sans-serif;
+        font-size: 16px;
+      }
+
+      &__checkbox {
+        margin: 5px 18px;
+
+        span {
+          font-size: 14px;
+        }
+
+        md-checkbox {
+          margin-left: 15px;
+        }
+      }
 
       md-input {
         margin: 5px 18px;
