--- a/template/core-dist/src/app/authentication/invite-accept/invite-accept.component.scss
+++ b/template/core-dist/src/app/authentication/invite-accept/invite-accept.component.scss
@@ -48,6 +48,11 @@
 
         &__primary {
           padding: 50px 30px 0;
+
+          &--bold {
+            margin-top: 20px;
+            font-size: 20px;
+          }
         }
 
         &__secondary {
