Delete button is not available on view/add component, if component is in 'add' mode.

--- a/template/core-dist/src/app/pages/products-page/product/product.component.html
+++ b/template/core-dist/src/app/pages/products-page/product/product.component.html
@@ -1,7 +1,7 @@
 <div #entityContainer class="entity" [class.entity--full-screen]="fullScreen">
   <div *ngIf="!loading" class="entity__body" [style.height]="height">
 
-    <entity-view-topnav [service]="service" (close)="closeDetails()" (del)="emitDeleteEntity()"></entity-view-topnav>
+    <entity-view-topnav [mode]="mode" [service]="service" (close)="closeDetails()" (del)="emitDeleteEntity()"></entity-view-topnav>
 
     <div *ngIf="entity">
       <div class="entity__caption">
