Enable edit/add for customer component.

--- a/template/core-dist/src/app/pages/customers-page/customers.component.html
+++ b/template/core-dist/src/app/pages/customers-page/customers.component.html
@@ -1,5 +1,12 @@
 <div #indexR class="entity-index">
-  <customer *ngIf="showEntityDetails" [entityId]="showEntityId" [fullScreen]="fullScreen" (close)="hideEntityDetails()" (deleteEntity)="deleteEntity($event)"></customer>
+  <customer
+    *ngIf="showEntityDetails"
+    [mode]="mode"
+    [entityId]="mode === 'view' ? showEntityId : ''"
+    [fullScreen]="fullScreen"
+    (close)="hideEntityDetails()"
+    (deleteEntity)="deleteEntity($event)">
+  </customer>
 
   <div class="entity-index__title">Customers</div>
 
