--- a/template/core-dist/src/app/pages/customers-page/customer/customer.component.html
+++ b/template/core-dist/src/app/pages/customers-page/customer/customer.component.html
@@ -4,11 +4,11 @@
 
     <div *ngIf="entity">
       <div class="entity__caption">
-        {{entity.name}}
+        {{entity.firstName + ' ' + entity.lastName}}
       </div>
 
-      <div class="entity__content">
-        <md-tab-group>
+      <div *ngIf="mode === 'view'" class="entity__content">
+        <md-tab-group [(selectedIndex)]="tabIndex">
           <md-tab label="Details">
 
             <entity-view-info
@@ -18,9 +18,7 @@
                 {name:'Email', value: entity.email},
                 {name:'First Name', value: entity.firstName},
                 {name:'Last Name', value: entity.lastName},
-                {name:'Phone', value: entity.phone},
-                {name:'State', value: entity.address.state},
-                {name:'City', value: entity.address.city}
+                {name:'Phone', value: entity.phone}
               ]">
             </entity-view-info>
 
@@ -31,16 +29,89 @@
                 {name:'State', value: entity.address.state},
                 {name:'City', value: entity.address.city},
                 {name:'Line 1', value: entity.address.line1},
-                {name:'Line 2', value: entity.address.line2},
                 {name:'Zip', value: entity.address.zip}
               ]">
             </entity-view-info>
 
-          </md-tab>
-          <md-tab label="Edit">
+            <entity-view-info-array
+              [title]="'CREDIT CARDS'"
+              [subtitle]="'Credit Card'"
+              [entities]="entity.creditCards"
+              [labels]="['Name', 'Expiration', 'CC Number', 'CCV']"
+              [fields]="['name','expiration','ccnumber', 'ccv']">
+            </entity-view-info-array>
 
           </md-tab>
+          <md-tab label="Edit">
+            <div class="entity__edit">
+              <div class="entity__edit__content">
+                <div class="entity__edit__content__title"> GENERAL DETAILS </div>
+                <md-input [(ngModel)]="entityCopy.email" placeholder="Email"></md-input>
+                <md-input [(ngModel)]="entityCopy.firstName" placeholder="First Name"></md-input>
+                <md-input [(ngModel)]="entityCopy.lastName" placeholder="Last Name"></md-input>
+                <md-input [(ngModel)]="entityCopy.phone" placeholder="Phone"></md-input>
+              </div>
+              <div class="entity__edit__content">
+                <div class="entity__edit__content__title"> ADDRESS </div>
+                <md-input [(ngModel)]="entityCopy.address.country" placeholder="Country"></md-input>
+                <md-input [(ngModel)]="entityCopy.address.state" placeholder="State"></md-input>
+                <md-input [(ngModel)]="entityCopy.address.city" placeholder="City"></md-input>
+                <md-input [(ngModel)]="entityCopy.address.line1" placeholder="Line 1"></md-input>
+                <md-input [(ngModel)]="entityCopy.address.zip" placeholder="Zip"></md-input>
+              </div>
+              <entity-view-info-array
+                [title]="'CREDIT CARDS'"
+                [subtitle]="'Credit Card'"
+                [entities]="entityCopy.creditCards"
+                [labels]="['Name', 'Expiration', 'CC Number', 'CCV']"
+                [fields]="['name','expiration','ccnumber', 'ccv']"
+                [editable]="true"
+                [options]="creditCards"
+                [optionsField]="'name'"
+                (select)="addCreditCard($event)"
+                (remove)="removeCreditCard($event)">
+              </entity-view-info-array>
+            </div>
+            <div class="entity__buttons">
+              <button md-raised-button (click)="update()">Update</button>
+              <button md-raised-button (click)="cancelUpdate()">Cancel</button>
+            </div>
+          </md-tab>
         </md-tab-group>
+      </div>
+
+      <div *ngIf="mode === 'add'" class="entity__add">
+        <div class="entity__edit__content">
+          <div class="entity__edit__content__title"> GENERAL DETAILS </div>
+          <md-input [(ngModel)]="entity.email" placeholder="Email"></md-input>
+          <md-input [(ngModel)]="entity.firstName" placeholder="First Name"></md-input>
+          <md-input [(ngModel)]="entity.lastName" placeholder="Last Name"></md-input>
+          <md-input [(ngModel)]="entity.phone" placeholder="Phone"></md-input>
+        </div>
+        <div class="entity__edit__content">
+          <div class="entity__edit__content__title"> ADDRESS </div>
+          <md-input [(ngModel)]="entity.address.country" placeholder="Country"></md-input>
+          <md-input [(ngModel)]="entity.address.state" placeholder="State"></md-input>
+          <md-input [(ngModel)]="entity.address.city" placeholder="City"></md-input>
+          <md-input [(ngModel)]="entity.address.line1" placeholder="Line 1"></md-input>
+          <md-input [(ngModel)]="entity.address.zip" placeholder="Zip"></md-input>
+        </div>
+        <entity-view-info-array
+          [title]="'CREDIT CARDS'"
+          [subtitle]="'Credit Card'"
+          [entities]="entity.creditCards"
+          [labels]="['Name', 'Expiration', 'CC Number', 'CCV']"
+          [fields]="['name','expiration','ccnumber', 'ccv']"
+          [editable]="true"
+          [options]="creditCards"
+          [optionsField]="'name'"
+          (select)="addCreditCard($event)"
+          (remove)="removeCreditCard($event)">
+        </entity-view-info-array>
+
+        <div class="entity__buttons">
+          <button md-raised-button (click)="create()">Save</button>
+        </div>
       </div>
     </div>
   </div>
