--- a/template/core-dist/src/assets/scss/_entity-view.scss
+++ b/template/core-dist/src/assets/scss/_entity-view.scss
@@ -157,6 +157,37 @@
         }
       }
     }
+
+    &__array {
+
+      &__item {
+        padding: 5px 18px 10px 18px;
+
+        &__subtitle {
+          font-size: 16px;
+          line-height: 24px;
+
+          md-icon {
+            float: right;
+            cursor: pointer;
+          }
+        }
+
+        &__field {
+          margin: 10px 0;
+
+          span {
+            font-size: 15px;
+            cursor: default;
+
+            &:first-child {
+              margin-right: 10px;
+              font-weight: 600;
+            }
+          }
+        }
+      }
+    }
   }
 
   &__edit {
@@ -184,9 +215,9 @@
       }
 
       md-input {
-        margin: 5px 18px;
+        margin: 0 18px;
         width: 300px;
-        font-size: 16px;
+        font-size: 14px;
       }
     }
   }
