--- a/template/core-dist/src/app/pages/customers-page/customer/customer.component.html
+++ b/template/core-dist/src/app/pages/customers-page/customer/customer.component.html
@@ -1,6 +1,6 @@
 <div #entityContainer class="entity" [class.entity--full-screen]="fullScreen" (del)="emitDeleteEntity()">
   <div *ngIf="!loading" class="entity__body" [style.height]="height">
-    <entity-view-topnav [service]="service" (close)="closeDetails()"></entity-view-topnav>
+    <entity-view-topnav [mode]="mode" [service]="service" (close)="closeDetails()"></entity-view-topnav>
 
     <div *ngIf="entity">
       <div class="entity__caption">
