--- a/template/core-dist/src/app/pages/search-page/search.component.html
+++ b/template/core-dist/src/app/pages/search-page/search.component.html
@@ -1,41 +1,44 @@
 <md-sidenav-layout [style.height]="height" class="search__layout">
   <md-sidenav class="search__sidenav" [mode]="'side'" [opened]="true">
     <md-nav-list>
-        <md-input [(ngModel)]="queryString">
+      <div class="search__sidenav__query__container">
+        <md-input (focus)="showAutoComplete()" [value]="queryString" (input)="inputChanged($event)" (blur)="hideAutoComplete()">
           <md-icon md-prefix>search</md-icon>
         </md-input>
-        <button class="search__search-box__button--search" md-raised-button color="primary" (click)="navigateSearch()">Search</button>
+        <autocomplete *ngIf="showAutocomplete && options.length > 0" (select)="optionSelected($event)" [options]="options"></autocomplete>
+      </div>
+      <button class="search__search-box__button--search" md-raised-button color="primary" (click)="navigateSearch()">Search</button>
 
-        <span class="search__sidenav__title"> Show Results for</span>
-        <span class="search__sidenav__item"> CUSTOMERS </span>
-        <span class="search__sidenav__item"> CAMPAIGNS </span>
-        <span class="search__sidenav__item"> PRODUCTS </span>
-        <span class="search__sidenav__item"> BILLING </span>
-        <span class="search__sidenav__item"> FULFILLMENT </span>
+      <span class="search__sidenav__title"> Show Results for</span>
+      <span class="search__sidenav__item"> CUSTOMERS </span>
+      <span class="search__sidenav__item"> CAMPAIGNS </span>
+      <span class="search__sidenav__item"> PRODUCTS </span>
+      <span class="search__sidenav__item"> BILLING </span>
+      <span class="search__sidenav__item"> FULFILLMENT </span>
 
-        <div class="search__sidenav__divider"></div>
+      <div class="search__sidenav__divider"></div>
 
-        <span class="search__sidenav__title search__sidenav__title--after"> Refined by </span>
-        <span class="search__sidenav__subtitle"> Brand </span>
-        <md-checkbox class="search__sidenav__item">Brand One</md-checkbox>
-        <md-checkbox class="search__sidenav__item">Brand Two</md-checkbox>
-        <md-checkbox class="search__sidenav__item">Brand Three</md-checkbox>
+      <span class="search__sidenav__title search__sidenav__title--after"> Refined by </span>
+      <span class="search__sidenav__subtitle"> Brand </span>
+      <md-checkbox class="search__sidenav__item">Brand One</md-checkbox>
+      <md-checkbox class="search__sidenav__item">Brand Two</md-checkbox>
+      <md-checkbox class="search__sidenav__item">Brand Three</md-checkbox>
 
-        <span class="search__sidenav__subtitle"> Merchant </span>
-        <md-checkbox class="search__sidenav__item">Merchant One</md-checkbox>
-        <md-checkbox class="search__sidenav__item">Merchant Two</md-checkbox>
-        <md-checkbox class="search__sidenav__item">Merchant Three</md-checkbox>
+      <span class="search__sidenav__subtitle"> Merchant </span>
+      <md-checkbox class="search__sidenav__item">Merchant One</md-checkbox>
+      <md-checkbox class="search__sidenav__item">Merchant Two</md-checkbox>
+      <md-checkbox class="search__sidenav__item">Merchant Three</md-checkbox>
 
-        <span class="search__sidenav__subtitle"> Product Category </span>
-        <md-checkbox class="search__sidenav__item">Diet</md-checkbox>
-        <md-checkbox class="search__sidenav__item">Muscle</md-checkbox>
-        <md-checkbox class="search__sidenav__item">Skin</md-checkbox>
+      <span class="search__sidenav__subtitle"> Product Category </span>
+      <md-checkbox class="search__sidenav__item">Diet</md-checkbox>
+      <md-checkbox class="search__sidenav__item">Muscle</md-checkbox>
+      <md-checkbox class="search__sidenav__item">Skin</md-checkbox>
 
-        <span class="search__sidenav__subtitle"> Sale Type </span>
-        <md-checkbox class="search__sidenav__item">Trial</md-checkbox>
-        <md-checkbox class="search__sidenav__item">Straight</md-checkbox>
+      <span class="search__sidenav__subtitle"> Sale Type </span>
+      <md-checkbox class="search__sidenav__item">Trial</md-checkbox>
+      <md-checkbox class="search__sidenav__item">Straight</md-checkbox>
 
-        <span class="search__sidenav__subtitle"> Date </span>
+      <span class="search__sidenav__subtitle"> Date </span>
     </md-nav-list>
   </md-sidenav>
 
