--- a/template/core-dist/src/app/pages/search-page/search.component.html
+++ b/template/core-dist/src/app/pages/search-page/search.component.html
@@ -1,53 +1,69 @@
-<md-sidenav-layout [style.height]="height" class="search__layout">
-  <md-sidenav class="search__sidenav" [mode]="'side'" [opened]="true">
-    <md-nav-list>
-      <div class="search__sidenav__query__container">
-        <md-input (focus)="showAutoComplete()" [value]="queryString" (input)="inputChanged($event)" (blur)="hideAutoComplete()">
-          <md-icon md-prefix>search</md-icon>
-        </md-input>
-        <autocomplete *ngIf="showAutocomplete && options.length > 0" (select)="optionSelected($event)" [options]="options"></autocomplete>
+<div class="search">
+  <div class="search__title">Search</div>
+  <div class="search__layout">
+    <div class="search__sidenav">
+      <md-nav-list>
+        <div class="search__sidenav__query__container">
+          <md-input (focus)="showAutoComplete()" [value]="queryString" (input)="inputChanged($event)" (blur)="hideAutoComplete()">
+            <md-icon class="search__sidenav__query__icon" md-prefix>search</md-icon>
+          </md-input>
+          <autocomplete *ngIf="showAutocomplete && options.length > 0" (select)="optionSelected($event)" [options]="options"></autocomplete>
+        </div>
+        <button class="search__sidenav__button--search" md-raised-button color="primary" (click)="navigateSearch()">Search</button>
+
+        <md-checkbox class="search__sidenav__item">Campaign</md-checkbox>
+        <md-checkbox class="search__sidenav__item">Customer</md-checkbox>
+        <md-checkbox class="search__sidenav__item">User</md-checkbox>
+        <md-checkbox class="search__sidenav__item">Billing</md-checkbox>
+        <md-checkbox class="search__sidenav__item">Transaction</md-checkbox>
+        <md-checkbox class="search__sidenav__item">Product</md-checkbox>
+        <md-checkbox class="search__sidenav__item">Fulfillment</md-checkbox>
+        <md-checkbox class="search__sidenav__item">Product Schedule</md-checkbox>
+
+        <div class="search__sidenav__divider"></div>
+
+        <span class="search__sidenav__title search__sidenav__title--after"> Refined by Date </span>
+        <span class="search__sidenav__subtitle"> Date </span>
+
+        <span class="search__sidenav__title search__sidenav__title--after"> Refined by </span>
+        <span class="search__sidenav__subtitle"> Brand </span>
+        <md-checkbox class="search__sidenav__item">Brand One</md-checkbox>
+        <md-checkbox class="search__sidenav__item">Brand Two</md-checkbox>
+        <md-checkbox class="search__sidenav__item">Brand Three</md-checkbox>
+
+        <span class="search__sidenav__subtitle"> Merchant </span>
+        <md-checkbox class="search__sidenav__item">Merchant One</md-checkbox>
+        <md-checkbox class="search__sidenav__item">Merchant Two</md-checkbox>
+        <md-checkbox class="search__sidenav__item">Merchant Three</md-checkbox>
+
+        <span class="search__sidenav__subtitle"> Product Category </span>
+        <md-checkbox class="search__sidenav__item">Diet</md-checkbox>
+        <md-checkbox class="search__sidenav__item">Muscle</md-checkbox>
+        <md-checkbox class="search__sidenav__item">Skin</md-checkbox>
+
+        <span class="search__sidenav__subtitle"> Sale Type </span>
+        <md-checkbox class="search__sidenav__item">Trial</md-checkbox>
+        <md-checkbox class="search__sidenav__item">Straight</md-checkbox>
+      </md-nav-list>
+    </div>
+
+    <div class="search__content">
+      <div class="search__content__title">
+        <span>Results</span>
+        <table-pagination
+          class="search__content__pagination"
+          [limit]="limit"
+          [paginationValues]="paginationValues"
+          [previousDisabled]="page <= 0"
+          [nextDisabled]="!hasMore"
+          (previous)="previous()"
+          (next)="next()"
+          (updateLimit)="updateLimit($event)"></table-pagination>
       </div>
-      <button class="search__search-box__button--search" md-raised-button color="primary" (click)="navigateSearch()">Search</button>
 
-      <span class="search__sidenav__title"> Show Results for</span>
-      <span class="search__sidenav__item"> CUSTOMERS </span>
-      <span class="search__sidenav__item"> CAMPAIGNS </span>
-      <span class="search__sidenav__item"> PRODUCTS </span>
-      <span class="search__sidenav__item"> BILLING </span>
-      <span class="search__sidenav__item"> FULFILLMENT </span>
-
-      <div class="search__sidenav__divider"></div>
-
-      <span class="search__sidenav__title search__sidenav__title--after"> Refined by </span>
-      <span class="search__sidenav__subtitle"> Brand </span>
-      <md-checkbox class="search__sidenav__item">Brand One</md-checkbox>
-      <md-checkbox class="search__sidenav__item">Brand Two</md-checkbox>
-      <md-checkbox class="search__sidenav__item">Brand Three</md-checkbox>
-
-      <span class="search__sidenav__subtitle"> Merchant </span>
-      <md-checkbox class="search__sidenav__item">Merchant One</md-checkbox>
-      <md-checkbox class="search__sidenav__item">Merchant Two</md-checkbox>
-      <md-checkbox class="search__sidenav__item">Merchant Three</md-checkbox>
-
-      <span class="search__sidenav__subtitle"> Product Category </span>
-      <md-checkbox class="search__sidenav__item">Diet</md-checkbox>
-      <md-checkbox class="search__sidenav__item">Muscle</md-checkbox>
-      <md-checkbox class="search__sidenav__item">Skin</md-checkbox>
-
-      <span class="search__sidenav__subtitle"> Sale Type </span>
-      <md-checkbox class="search__sidenav__item">Trial</md-checkbox>
-      <md-checkbox class="search__sidenav__item">Straight</md-checkbox>
-
-      <span class="search__sidenav__subtitle"> Date </span>
-    </md-nav-list>
-  </md-sidenav>
-
-  <div class="search__content">
-    <md-card *ngFor="let result of (searchService.searchResults$ | async)">
-      <md-card-title> {{result.fields.entity_type[0]}} ID: {{result.id}}<md-icon>keyboard_arrow_down</md-icon></md-card-title>
-      <md-card-content>
-        {{getString(result.fields)}}
-      </md-card-content>
-    </md-card>
+      <ng-container *ngFor="let res of searchResultsToDispaly">
+        <result-item [fields]="res.fields" [id]="res.id" [entityType]="res.fields.entity_type" [queryString]="queryString"></result-item>
+      </ng-container>
+    </div>
   </div>
-</md-sidenav-layout>
+</div>
