--- a/template/core-dist/src/styles.scss
+++ b/template/core-dist/src/styles.scss
@@ -13,6 +13,7 @@
 @import "assets/scss/_tab.scss";
 @import "assets/scss/_menu.scss";
 @import "assets/scss/_dashboard.scss";
+@import "assets/scss/_search.scss";
 
 /***************
   HTML Styles
