--- a/template/core-dist/src/app/pages/search-page/result-item/result-item.component.html
+++ b/template/core-dist/src/app/pages/search-page/result-item/result-item.component.html
@@ -23,4 +23,7 @@
       <div class="search__content__results__item__fields__wrapper" *ngIf="fields.tracking_number">Tracking Number: <div>{{fields.tracking_number}}</div></div>
     </div>
   </div>
+  <div class="search__content__results__item__buttons">
+    <span><md-icon>open_in_new</md-icon>View</span>
+  </div>
 </div>
