Fix few search result pagination issues.

--- a/template/core-dist/src/app/pages/search-page/search.component.html
+++ b/template/core-dist/src/app/pages/search-page/search.component.html
@@ -55,7 +55,7 @@
           [limit]="limit"
           [paginationValues]="paginationValues"
           [previousDisabled]="page <= 0"
-          [nextDisabled]="!hasMore"
+          [nextDisabled]="!hasMorePages()"
           (previous)="previous()"
           (next)="next()"
           (updateLimit)="updateLimit($event)"></table-pagination>
