--- a/template/core-dist/src/app/pages/search-page/search.component.html
+++ b/template/core-dist/src/app/pages/search-page/search.component.html
@@ -11,14 +11,38 @@
         </div>
         <button class="search__sidenav__button--search" md-raised-button color="primary" (click)="navigateSearch()">Search</button>
 
-        <md-checkbox class="search__sidenav__item">Campaign ({{entityTypesCount['campaign'] || 0}})</md-checkbox>
-        <md-checkbox class="search__sidenav__item">Customer ({{entityTypesCount['customer'] || 0}})</md-checkbox>
-        <md-checkbox class="search__sidenav__item">User ({{entityTypesCount['user'] || 0}})</md-checkbox>
-        <md-checkbox class="search__sidenav__item">Billing ({{entityTypesCount['billing'] || 0}})</md-checkbox>
-        <md-checkbox class="search__sidenav__item">Transaction ({{entityTypesCount['transaction'] || 0}})</md-checkbox>
-        <md-checkbox class="search__sidenav__item">Product ({{entityTypesCount['product'] || 0}})</md-checkbox>
-        <md-checkbox class="search__sidenav__item">Fulfillment ({{entityTypesCount['fulfillment'] || 0}})</md-checkbox>
-        <md-checkbox class="search__sidenav__item">Product Schedule ({{entityTypesCount['productschedule'] || 0}})</md-checkbox>
+        <md-checkbox class="search__sidenav__item">
+          Campaign
+          <span *ngIf="entityTypesCount['campaign']">({{entityTypesCount['campaign']}})</span>
+        </md-checkbox>
+        <md-checkbox class="search__sidenav__item">
+          Customer
+          <span *ngIf="entityTypesCount['customer']">({{entityTypesCount['customer']}})</span>
+        </md-checkbox>
+        <md-checkbox class="search__sidenav__item">
+          User
+          <span *ngIf="entityTypesCount['user']">({{entityTypesCount['user']}})</span>
+        </md-checkbox>
+        <md-checkbox class="search__sidenav__item">
+          Billing
+          <span *ngIf="entityTypesCount['billing']">({{entityTypesCount['billing']}})</span>
+        </md-checkbox>
+        <md-checkbox class="search__sidenav__item">
+          Transaction
+          <span *ngIf="entityTypesCount['transaction']">({{entityTypesCount['transaction']}})</span>
+        </md-checkbox>
+        <md-checkbox class="search__sidenav__item">
+          Product
+          <span *ngIf="entityTypesCount['product']">({{entityTypesCount['product']}})</span>
+        </md-checkbox>
+        <md-checkbox class="search__sidenav__item">
+          Fulfillment
+          <span *ngIf="entityTypesCount['fulfillment']">({{entityTypesCount['fulfillment']}})</span>
+        </md-checkbox>
+        <md-checkbox class="search__sidenav__item">
+          Product Schedule
+          <span *ngIf="entityTypesCount['productschedule']">({{entityTypesCount['productschedule']}})</span>
+        </md-checkbox>
 
         <div class="search__sidenav__divider"></div>
 
