--- a/template/core-dist/src/app/pages/search-page/search.component.html
+++ b/template/core-dist/src/app/pages/search-page/search.component.html
@@ -72,7 +72,7 @@
 
     <div class="search__content">
       <div class="search__content__title">
-        <span>Results</span>
+        <span>Search Results</span>
         <table-pagination
           class="search__content__pagination"
           [limit]="limit"
@@ -81,7 +81,8 @@
           [nextDisabled]="!hasMorePages()"
           (previous)="previous()"
           (next)="next()"
-          (updateLimit)="updateLimit($event)"></table-pagination>
+          (updateLimit)="updateLimit($event)">
+        </table-pagination>
       </div>
 
       <ng-container *ngFor="let res of searchResultsToDispaly">
